--- a/emotions/styles.css
+++ b/emotions/styles.css
@@ -1,23 +1,45 @@
 body {
     margin: 0;
+    background-image: linear-gradient(45deg,red, blue);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    overflow: hidden;
+  }
+
+  #welcomeMsg{
+    color: white;
+    font-size: 300%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 35%;
+    padding: 0;
+    margin-top: 2%;
+    margin-left: 1%;
+    float: left;
   }
 
   #face{
     position: relative;
-    top: 25%;
-    left: 25%;
+    top: 30px;
+    left: 34%;
   }
 canvas {
     position: absolute;
     top: 0;
     left: 0;
     padding: 0;
-    border: dotted red 5px;
 }
 
 #current_emotion{
   position: relative;
-  left: 40%;
+  left: 8%;
+  top: 30px;
+  background-image: linear-gradient(45deg,blue 30%, red);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 /* 
  #face {
